--- a/src/pages/testing/test-creation/complete-test/complete-test.scss
+++ b/src/pages/testing/test-creation/complete-test/complete-test.scss
@@ -121,12 +121,12 @@ ion-app.ios page-complete-test {
     color: $color-grey-1;
   }
 
-  ion-header {
-    ion-navbar.toolbar.toolbar-ios.statusbar-padding {
-      height: 100px;
-      padding-top: 24px !important;
-    }
-  }
+  //ion-header {
+  //  ion-navbar.toolbar.toolbar-ios.statusbar-padding {
+  //    height: 100px;
+  //    padding-top: 24px !important;
+  //  }
+  //}
 
   .scroll-content {
     margin-top: 100px;
