--- a/src/pages/testing/test-creation/eu-vehicle-category/eu-vehicle-category.scss
+++ b/src/pages/testing/test-creation/eu-vehicle-category/eu-vehicle-category.scss
@@ -1,9 +1,9 @@
 page-eu-vehicle-category {
   ion-header {
-    ion-navbar.toolbar.toolbar-ios.statusbar-padding {
-      height: 100px;
-      padding-top: 24px !important;
-    }
+    //ion-navbar.toolbar.toolbar-ios.statusbar-padding {
+    //  height: 100px;
+    //  padding-top: 24px !important;
+    //}
 
     ion-title[margin-left].title-ios {
       padding-top: 20px;
