fix(cvsb-15129): added initial css fixes

--- a/src/pages/signature-pad/signature-pad.scss
+++ b/src/pages/signature-pad/signature-pad.scss
@@ -28,6 +28,7 @@ page-signature-pad {
         display: block;
         margin: 12px auto;
         width: 95%;
+        max-height: 200px;
       }
     }
   }
