--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -141,15 +141,14 @@ span[text-left] {
 .ios ion-tabs > .ion-page.tab-subpage > ion-header > .toolbar.statusbar-padding:first-child,
 .ios ion-menu > .menu-inner > .toolbar.statusbar-padding:first-child,
 .ios ion-menu > .menu-inner > ion-header > .toolbar.statusbar-padding:first-child {
-  padding-top: 24px;
-  padding-top: constant(safe-area-inset-top);
-  padding-top: env(safe-area-inset-top);
+  padding-top: calc(constant(safe-area-inset-top) + 4px);
+  padding-top: calc(env(safe-area-inset-top) + 4px);
   padding-left: calc(constant(safe-area-inset-left) + 4px);
   padding-left: calc(env(safe-area-inset-left) + 4px);
   padding-right: calc(constant(safe-area-inset-right) + 4px);
   padding-right: calc(env(safe-area-inset-right) + 4px);
-  padding-bottom: constant(safe-area-inset-top);
-  padding-bottom: env(safe-area-inset-top);
+  padding-bottom: calc(constant(safe-area-inset-bottom) + 4px);
+  padding-bottom: calc(env(safe-area-inset-bottom) + 4px);
   min-height: 116px;
 
   .title-ios {
