--- a/src/components/signature-popover/signature-popover.html
+++ b/src/components/signature-popover/signature-popover.html
@@ -8,10 +8,10 @@
   </ion-row>
   <ion-row class="row-border">
     <ion-col col-6 text-center class="col-border">
-      <button ion-button full clear (click)="closePop()">Cancel</button>
+      <button id="signature-cancel-btn" ion-button full clear (click)="closePop()">Cancel</button>
     </ion-col>
     <ion-col col-6 text-center>
-      <button ion-button full clear (click)="confirmPop()" class="bold-action-button">
+      <button id="signature-confirm-btn" ion-button full clear (click)="confirmPop()" class="bold-action-button">
         Confirm
       </button>
     </ion-col>
